Fix paragraph spacing within table cells

--- a/packages/editor/ProseMirror/styles/table.css
+++ b/packages/editor/ProseMirror/styles/table.css
@@ -3,6 +3,6 @@ table .selectedCell {
 	outline: 2px solid var(--joplin-text-selection-color);
 }
 
-th > p, td > p {
+th > p:only-child, td > p:only-child {
 	margin: unset;
 }
